# mas_deliberation_room

./: .gitignore  README.md  pyproject.toml  requirements.txt
Datasets/: ecommerce_fashion.csv  ecommerce_fashion_strategy.txt  local_services.csv  local_services_strategy.txt  nonprofit.csv  nonprofit_strategy.txt  saas_b2b.csv  saas_b2b_strategy.txt  wellness_coaching.csv  wellness_coaching_strategy.txt
evaluation_results/: evaluation_report_manual_run.md  evaluation_report_manual_run_20251103_223808.json  evaluation_report_manual_run_20251103_225927.json  evaluation_report_manual_run_20251129_020315.json  evaluation_report_multi_run.md  evaluation_report_multi_run_20251129_020947.json  evaluation_report_multi_run_20251202_011358.json  evaluation_report_multi_run_20251202_171446.json  evaluation_report_single_run.md  evaluation_report_single_run_20251202_011328.json  evaluation_report_single_run_20251202_171350.json
knowledge/: user_preference.txt
output/: agent_mode_results.json  claude_strategy.json  dataset_validation_ecommerce_fashion.json  experiment_suite_results.json  final_strategy.json  final_strategy.txt  gemini_strategy.json  llm_judge_evaluations.json  llm_judge_report.md  multi_run_statistics.json  openai_creative_strategy.json  openai_strategy.json  openai_strategy.txt  ordering_experiment.json
src/mas_deliberation_room/: compare_configurations.py  crew.py  dataset_validation.py  evaluation.py  failure_analysis.py  llm_judge.py  main.py  model_validator.py  sensitivity_analysis.py  visualization_generator.py
(+2 files in other folders)
