[project]
name = "mas_deliberation_room"
version = "0.1.0"
description = "MAS_Deliberation_Room using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]>=0.201.1,<1.0.0",
]

[project.scripts]
mas_deliberation_room = "mas_deliberation_room.main:run"
run_crew = "mas_deliberation_room.main:run"
train = "mas_deliberation_room.main:train"
replay = "mas_deliberation_room.main:replay"
test = "mas_deliberation_room.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
